examples/deployments.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stilton
  labels:
    app: cheese
    cheese: stilton
spec:
  selector:
    matchLabels:
      app: cheese
      task: stilton
  template:
    metadata:
      labels:
        app: cheese
        task: stilton
    spec:
      containers:
        - name: cheese
          image: errm/cheese:stilton
          ports:
            - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cheddar
  labels:
    app: cheese
    cheese: cheddar
spec:
  selector:
    matchLabels:
      app: cheese
      task: cheddar
  template:
    metadata:
      labels:
        app: cheese
        task: cheddar
    spec:
      containers:
        - name: cheese
          image: errm/cheese:cheddar
          ports:
            - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wensleydale
  labels:
    app: cheese
    cheese: wensleydale
spec:
  selector:
    matchLabels:
      app: cheese
      task: wensleydale
  template:
    metadata:
      labels:
        app: cheese
        task: wensleydale
    spec:
      containers:
        - name: cheese
          image: errm/cheese:wensleydale
          ports:
            - containerPort: 80
