examples/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stilton
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: cheese
    task: stilton
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: cheddar
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: cheese
    task: cheddar
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: wensleydale
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: cheese
    task: wensleydale
  type: NodePort
